apps/homepage/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-edge-gateway
      namespace: cilium-ingress

  hostnames:
    - "gwg313.xyz"
    - "local.gwg313.xyz"
    - "zerotier.gwg313.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-homepage
  namespace: homepage
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-ingress
  to:
    - group: ""
      kind: Service
      name: homepage
