apps/homepage/network-policy.yaml
# ----------------------------------------------------
# Ingress only from Gateway API
# ----------------------------------------------------
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
  namespace: homepage
spec:
  endpointSelector:
    matchLabels:
      app: homepage

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
